# synthetic-image-detection

./: .gitignore  README.md  hello.py  pyproject.toml
alchemist/: __init__.py  alchemist.py  pipelines.py
data/datasets/ai_vs_human_generated/: processed.csv
data/datasets/openimagesv7/: processed.csv
data/datasets/sd_faces/: processed.csv
data/datasets/sfhq_t2i/: processed.csv
data/scripts/: create_downsample_zip.py  download_datasets.sh  download_elsa_d3.py  download_openimages.py  downsample_and_archivate.sh  downsample_datasets.py  prepare_data.py
notebooks/: alchemist.ipynb  baseline.ipynb  sana_clf.ipynb
sana-clf/: clf.py  pipeline.py  train.py
sana_clf/: pipeline.py  train.py
tools/: captioner.py  generator.py  sigclip2_embedder.py
