[project]
name = "synthetic-images-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.31.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "torch-directml>=0.2.5.dev240914",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = []
